--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,11 +10,12 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #272829;
+  color: #e1e6eb;
+  background-color: #1d1d1d;
 }
 
 a {
-  color: #cc1111;
+  color: #ff4242;
   text-decoration: none;
 }
 
@@ -86,7 +87,7 @@ body::-webkit-scrollbar-thumb {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #fff;
+  background: #000000;
 }
 
 #preloader:before {
@@ -95,8 +96,8 @@ body::-webkit-scrollbar-thumb {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #cc1111;
-  border-top-color: #fff;
-  border-bottom-color: #fff;
+  border-top-color: #000000;
+  border-bottom-color: #000000;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -148,8 +149,8 @@ body::-webkit-scrollbar-thumb {
 @media (max-width: 992px) {
   #header {
     width: 300px;
-    background: #fff;
-    border-right: 1px solid #e6e9ec;
+    background: #000000;
+    border-right: 1px solid #1c1c1d;
     left: -300px;
   }
 }
@@ -185,13 +186,13 @@ body::-webkit-scrollbar-thumb {
 .nav-menu a {
   display: flex;
   align-items: center;
-  color: #45505b;
+  color: #e7e7e8;
   padding: 10px 18px;
   margin-bottom: 8px;
   transition: 0.3s;
   font-size: 15px;
   border-radius: 50px;
-  background: #f2f3f5;
+  background: #464646;
   height: 56px;
   width: 100%;
   overflow: hidden;
@@ -289,7 +290,7 @@ body::-webkit-scrollbar-thumb {
 
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(57, 57, 57, 0.8);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -302,18 +303,18 @@ body::-webkit-scrollbar-thumb {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color: #ffffff;
 }
 
 #hero p {
-  color: #45505b;
+  color: #ffffff;
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
-  color: #cc1111;
+  color: #fe4e4e;
   letter-spacing: 1px;
 }
 
@@ -324,7 +325,7 @@ body::-webkit-scrollbar-thumb {
 #hero .social-links a {
   font-size: 24px;
   display: inline-block;
-  color: rgb(92, 92, 92);
+  color: rgb(255, 83, 83);
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
@@ -355,6 +356,7 @@ body::-webkit-scrollbar-thumb {
 section {
   padding: 60px 0;
   overflow: hidden;
+  background-color: #1d1d1d;
 }
 
 .section-title {
@@ -369,7 +371,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #45505b;
+  color: #ffffff;
 }
 
 .section-title h2::before {
@@ -404,7 +406,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #728394;
+  color: #ffffff;
 }
 
 .about .content ul {
@@ -506,7 +508,7 @@ section {
   width: 100%;
   position: relative;
   text-align: center;
-  background: #fff;
+  background: #222324;
 }
 
 .stats .count-box i {
@@ -529,7 +531,7 @@ section {
   font-size: 36px;
   display: block;
   font-weight: 600;
-  color: #011426;
+  color: #ffffff;
 }
 
 .stats .count-box p {
@@ -556,7 +558,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #45505b;
+  color: #ffffff;
 }
 
 .skills .progress .skill .val {
@@ -565,7 +567,7 @@ section {
 }
 
 .skills .progress-bar-wrap {
-  background: #f2f3f5;
+  background: #444545;
 }
 
 .skills .progress-bar {
@@ -583,7 +585,7 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #45505b;
+  color: #ffffff;
 }
 
 .resume .resume-item {
@@ -599,13 +601,13 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #cc1111;
+  color: #ff4242;
   margin-bottom: 10px;
 }
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #f7f8f9;
+  background: #444545;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -632,7 +634,7 @@ section {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #fff;
+  background: #cc1111;
   border: 2px solid #cc1111;
 }
 
@@ -641,8 +643,8 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
-  background: #f7f8f9;
-  color: #45505b;
+  background: #222324;
+  color: #ffffff;
   min-height: 40px;
 }
 
@@ -695,7 +697,7 @@ section {
   margin: 0 auto 25px auto;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background: #272829;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -708,7 +710,7 @@ section {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #272829;
+  color: #ffffff;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
@@ -1146,7 +1148,7 @@ Profile
 .contact .info {
   color: #444;
   text-align: center;
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+  box-shadow: 0 0 30px rgba(74, 81, 88, 0.6);
   padding: 20px 0 30px 0;
   margin-bottom: 30px;
   width: 100%;
@@ -1154,7 +1156,7 @@ Profile
 
 .contact .info i {
   font-size: 32px;
-  color: #ed0606;
+  color: #cc1111;
   border-radius: 50%;
   padding: 8px;
   border: 2px dotted #ff5555;
@@ -1162,7 +1164,7 @@ Profile
 
 .contact .info h3 {
   font-size: 20px;
-  color: #666;
+  color: #ffffff;
   font-weight: 700;
   margin: 10px 0;
 }
@@ -1180,6 +1182,10 @@ Profile
   margin-bottom: 0;
   font-size: 14px;
   color: #728394;
+}
+
+.contact span {
+  color: #fff;
 }
 
 .contact .info .email, .contact .info .phone {
@@ -1291,8 +1297,8 @@ Profile
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #f7f8f9;
-  color: #45505b;
+  background: #222324;
+  color: #ffffff;
   font-size: 14px;
   text-align: center;
   padding: 30px 0;
@@ -1447,7 +1453,7 @@ Discord Integration
 
 .changelog .text-muted {
   font-family: "Open Sans", sans-serif;
-    color: #000000 !important;
+    color: #ffffff !important;
 }
 
 #branding-hero {
